samples/_failures_safe/1761224631_f2967c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aac80dfa.c: In function ‘main’:
./samples/SAFE/__tmp_aac80dfa.c:160:16: error: missing terminating " character
  160 |         printf("Node out of range\n
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aac80dfa.c:160:9: error: expected expression at end of input
  160 |         printf("Node out of range\n
      |         ^~~~~~
./samples/SAFE/__tmp_aac80dfa.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aac80dfa.c:160:9: error: expected declaration or statement at end of input
